2005-06-17  Carl Worth  <cworth@cworth.org>

	* src/cairo.c: (cairo_reference), (cairo_destroy): cairo_reference
	and cairo_destroy shouldn't behave differently when cr->status
	indicates an error. Fix this bug that just slipped back in.

	* src/cairo.c: (cairo_restore): Remove useless conditional return
	at the end of a void function.

	* src/cairo.c: (cairo_get_source), (cairo_get_font_face),
	(cairo_text_extents), (cairo_show_text), (cairo_text_path):
	Fix so that after calling _cairo_error the most that any cairo
	entry function ever does is return a previously computed value.

2005-06-17  Kristian Høgsberg  <krh@redhat.com>

	* TODO: Remove the path clipping entry from the list.

2005-06-16  Carl Worth  <cworth@cworth.org>

	* src/cairo-private.h: Reorder fields of cairo_private_t to match
	initialization order.

	* src/cairo.c: (_cairo_error): Call error_notify callback if set.
	(cairo_create): Initialize error_notify callback to NULL.
	(cairo_set_error_notify): New function to allow the user to set
	an error notify callback.
	
	* src/cairo.h: New cairo_set_error_notify prototye.
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/error-notify.c: (toggle_status), (do_test), (main): New
	test for cairo_set_error_notify.

2005-06-15  Carl Worth  <cworth@cworth.org>

	* TODO: Add CAIRO_STATUS_DESTROYED to TODO list.
	
	* ROADMAP: Note progress on consistent error handling.
	
	* src/cairo-surface.c: Fix typo in documentation comment for
	_cairo_surface_get_current_clip_serial.

2005-06-15  Owen Taylor  <otaylor@redhat.com>

	* doc/public/Makefile.am (MKTMPL_OPTIONS): Remove --only-section-tmpl;
	it doesn't really work currently :-(.

2005-06-15  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-gstate.c (_cairo_gstate_clip_and_composite_trapezoids):
	Use a clip region when rendering a non-solid pattern through
	a rectangular path ... trapezoid rasterization is just too slow
	to use that path when we aren't forced to do so.
