@@ -1,3 +1,13 @@
+2005-06-17  Kristian Høgsberg  <krh@redhat.com>
+
+	* src/cairo-glitz-surface.c: (_cairo_glitz_surface_get_image):
+	* src/cairo-pattern.c: (cairo_pattern_create_for_surface):
+	* src/cairo-pdf-surface.c: (_cairo_pdf_surface_composite_pdf):
+	* src/cairo-surface.c: (_cairo_surface_init):
+	* src/cairo-xlib-surface.c: (_get_image_surface):
+	* src/cairoint.h: Remove matrix, filter and repeat from the
+	cairo_surface_t struct.
+
 2005-06-17  Carl Worth  <cworth@cworth.org>
 
 	* src/cairo.c: (cairo_reference), (cairo_destroy): cairo_reference
